# markdown-peek

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SAMPLE.md  config.example.toml  flake.nix
.github/workflows/: release.yml
crates/mdpeek-analyzer/: Cargo.toml
crates/mdpeek-analyzer/examples/: analyze.rs
crates/mdpeek-analyzer/src/: analyzer.rs  generation.rs  lib.rs  links.rs  model.rs  panel.rs
crates/mdpeek-analyzer/src/analyzer/: block_class.rs  code.rs  doctype.rs  table.rs  tasks.rs
crates/mdpeek-core/: Cargo.toml
crates/mdpeek-core/src/: lib.rs  parser.rs
crates/mdpeek-domain/: Cargo.toml  README.md
crates/mdpeek-domain/examples/: generate.rs  production_order.md  recipe.md
crates/mdpeek-domain/src/: lib.rs  nodes.rs  parser.rs  quantity.rs  seam.rs  visibility.rs
crates/mdpeek-domain/src/generators/: mod.rs  procedure.rs  production_order.rs  text.rs
crates/mdpeek-domain/tests/: wire_format.rs
crates/mdpeek-domain/web/: ir.ts  quantity.ts  registry.ts
crates/mdpeek-domain/web/components/: CharacterRoster.tsx  Glossary.tsx  ObligationMatrix.tsx  ScalableTable.tsx  SourceRangeLink.tsx  StepNavigator.tsx  ToleranceMeter.tsx
crates/mdpeek-gfm/: Cargo.toml
crates/mdpeek-gfm/src/: lib.rs
crates/mdpeek-gui/: Cargo.toml
crates/mdpeek-gui/src/: complete.rs  lib.rs
crates/mdpeek-gui/src/cache/: key.rs  mod.rs  store.rs
crates/mdpeek-gui/src/generator/: rules.rs  traits.rs
crates/mdpeek-gui/src/generator/llm/: anthropic.rs  claude_code.rs  mod.rs  prompt.rs
crates/mdpeek-gui/src/ir/: node.rs  range.rs  registry.rs  validate.rs
crates/mdpeek-gui/src/planner/: mod.rs
crates/mdpeek-parser/: Cargo.toml
crates/mdpeek-parser/src/: lib.rs
crates/mdpeek-render-html/: Cargo.toml
crates/mdpeek-render-html/src/: lib.rs
crates/mdpeek-render-term/: Cargo.toml
crates/mdpeek-render-term/src/: color.rs  emoji.rs  highlight.rs  lib.rs
crates/mdpeek-server/: Cargo.toml
crates/mdpeek-server/src/: explorer.rs  lib.rs  scrolly.rs
crates/mdpeek-watcher/: Cargo.toml
crates/mdpeek-watcher/src/: lib.rs
docs/: architecture.md  competitive-analysis.md  layer3.md  sample-design-doc.md
editors/: README.md
editors/github/: README.md  action.yml  render.sh
editors/github/workflows/: md-preview.yml
editors/nvim/: README.md
editors/nvim/lua/mdpeek/: config.lua  init.lua
editors/nvim/plugin/: mdpeek.lua
editors/tui-ir/: Cargo.toml  README.md
editors/tui-ir/fixtures/: design-doc.json
editors/tui-ir/src/: ir.rs  main.rs  render.rs
src/: cli.rs  config.rs  emitter.rs  gfm.rs  gui.rs  main.rs  semantic.rs  server.rs  tui.rs  watcher.rs
src/cache/: store.rs
src/emitter/: html.rs  term.rs
src/emitter/term/: highlight.rs
src/generator/: mod.rs  rules.rs
src/generator/llm/: claude.rs  codex.rs  mod.rs  prompt.rs
src/ir/: mod.rs  node.rs  registry.rs  validate.rs
src/renderer/: html.rs
src/repo/: git.rs  manifest.rs  mod.rs  refs.rs  report.rs  scan.rs  todo.rs
src/semantic/: analyzer.rs  model.rs  panel.rs  parser.rs
src/semantic/analyzer/: block_class.rs  code.rs  doctype.rs  table.rs  tasks.rs
static/: index.html
static/css/: github-dark.css  github-light.css
static/js/: main.js
templates/: preview.html
tests/: error_handling.rs  gen_output.rs  help_output.rs  repo_output.rs  term_output.rs  themes.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: gui.sample.json
web/src/: ir.ts  main.tsx  panel.css  panel.tsx  registry.tsx  scrolly.css  scrolly.ts  styles.css
web/src/components/: index.tsx
web/src/layout/: ThreePane.tsx
