[package]
name = "markdown-peek"
version = "0.1.6"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
keywords = ["markdown", "cli"]
license-file = "LICENSE"
readme = "README.md"
description = "Markdown previewer in browser and terminal"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.18.3"
futures = "0.3"
notify = "8"
notify-debouncer-mini = "0.7"
owo-colors = "4.2"
pulldown-cmark = { version = "0.13", features = ["serde"] }
pulldown-cmark-escape = "0.11"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[[bin]]
name = "mdpeek"
path = "src/main.rs"
