[package]
name = "markdown-peek"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
keywords = ["markdown", "cli"]
license-file = "LICENSE"
readme = "README.md"
description = "Markdown previewer in browser and terminal"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.18.3"
emojis = "0.6"
futures = "0.3"
notify = "8"
notify-debouncer-mini = "0.7"
owo-colors = "4.2"
pulldown-cmark = { version = "0.13", features = ["serde"] }
pulldown-cmark-escape = "0.11"
regex = "1"
thiserror = "2.0"
terminal_size = "0.4"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
two-face = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
# LLM (Claude) generator backend, opt-in to keep the default build offline.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = []
# Enables the Claude-backed UI IR generator (generator::llm). Requires network
# + ANTHROPIC_API_KEY at runtime; falls back to RulesGenerator when unset.
llm = ["dep:reqwest"]

[[bin]]
name = "mdpeek"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
