# The repo root is both the `mdpeek` binary package and the workspace root.
# Keeping the binary package here means release.yml's version check
# (`grep '^version' Cargo.toml`) and `cargo install --path .` keep working
# even though the libraries are split into fine-grained member crates.
[workspace]
members = [
    "crates/mdpeek-gfm",
    "crates/mdpeek-parser",
    "crates/mdpeek-analyzer",
    "crates/mdpeek-render-html",
    "crates/mdpeek-render-term",
    "crates/mdpeek-watcher",
    "crates/mdpeek-server",
]

[package]
name = "markdown-peek"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
keywords = ["markdown", "cli"]
license-file = "LICENSE"
readme = "README.md"
description = "Markdown previewer in browser and terminal"

[dependencies]
mdpeek-gfm = { path = "crates/mdpeek-gfm" }
mdpeek-render-term = { path = "crates/mdpeek-render-term" }
mdpeek-server = { path = "crates/mdpeek-server" }
mdpeek-watcher = { path = "crates/mdpeek-watcher" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap-cargo = "0.18.3"
pulldown-cmark = "0.13"
terminal_size = "0.4"
toml = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30.2"
crossterm = "0.29.0"
ansi-to-tui = "8.0.1"

[[bin]]
name = "mdpeek"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
