[package]
name = "mdpeek-analyzer"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "Layer 2 rules-based semantic analyser (DocumentModel + side panel) for markdown-peek"

[dependencies]
mdpeek-gfm = { path = "../mdpeek-gfm" }
mdpeek-parser = { path = "../mdpeek-parser" }
pulldown-cmark = { version = "0.13", features = ["serde"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
