[package]
name = "mdpeek-gfm"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "GFM stream adapters (emoji shortcodes, extended autolinks) for markdown-peek"

[dependencies]
emojis = "0.6"
pulldown-cmark = "0.13"
regex = "1"
