[package]
name = "mdpeek-gui"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "Layer 3 Generative-UI core (UI IR + generators + cache) for markdown-peek"

[dependencies]
mdpeek-gfm = { path = "../mdpeek-gfm" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = { version = "0.13", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0"
# LLM (Anthropic API) backend, opt-in to keep the default build offline.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"], optional = true }

[features]
default = []
# Enables the Anthropic-API generator backend (generator::llm::anthropic).
# The claude_code / codex CLI backends need no extra features.
llm = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
