[package]
name = "mdpeek-parser"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "SourceRange-aware Markdown BlockTree parser for markdown-peek"

[dependencies]
mdpeek-gfm = { path = "../mdpeek-gfm" }
pulldown-cmark = { version = "0.13", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
