[package]
name = "mdpeek-render-html"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "HTML emitter for markdown-peek (pulldown-cmark event stream -> GitHub-style HTML)"

[dependencies]
pulldown-cmark = "0.13"
pulldown-cmark-escape = "0.11"
tracing = "0.1"
