[package]
name = "mdpeek-server"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "Axum web server with WebSocket live-reload for markdown-peek"

[dependencies]
mdpeek-gfm = { path = "../mdpeek-gfm" }
mdpeek-render-html = { path = "../mdpeek-render-html" }
mdpeek-watcher = { path = "../mdpeek-watcher" }
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
futures = "0.3"
pulldown-cmark = "0.13"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
