[package]
name = "mdpeek-server"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "Axum web server with WebSocket live-reload for markdown-peek"

[dependencies]
mdpeek-gfm = { path = "../mdpeek-gfm" }
mdpeek-gui = { path = "../mdpeek-gui" }
mdpeek-parser = { path = "../mdpeek-parser" }
mdpeek-render-html = { path = "../mdpeek-render-html" }
mdpeek-watcher = { path = "../mdpeek-watcher" }
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
futures = "0.3"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
walkdir = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"

[features]
default = []
# Forwards to mdpeek-gui's Anthropic-API backend for `/api/gui` LLM generation.
llm = ["mdpeek-gui/llm"]
