[package]
name = "mdpeek-watcher"
version = "0.0.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/markdown-peek"
license-file = "../../LICENSE"
description = "Debounced file-change notifier for markdown-peek"

[dependencies]
notify = "8"
notify-debouncer-mini = "0.7"
tracing = "0.1"
