# NOTE (Layer 5): This is an intentionally *standalone* crate.
#
# It carries its own empty `[workspace]` table so that it is decoupled from the
# root `markdown-peek` package (and from the future `mdpeek-*` Cargo workspace
# that Layer 2 introduces — see AGENTS.md 論点 B). Keeping it independent means
# Layer 5 can land without touching the root manifest and therefore without
# conflicting with the Layer 1–4 worktrees.
#
# The `ir` module here is a *provisional* mirror of the `UiNode` IR specified in
# AGENTS.md §4. When Layer 3 lands `mdpeek-core::ir`, this crate should depend on
# that crate and delete `src/ir.rs` (the wire format is identical serde JSON, so
# the renderer in `src/render.rs` is unaffected).
[workspace]

[package]
name = "mdpeek-tui-ir"
version = "0.0.0"
edition = "2021"
description = "IR-driven ratatui renderer for mdpeek Generative UI (Layer 5)"
license-file = "../../LICENSE"

[[bin]]
name = "mdpeek-tui-ir"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
